<resources>
    <string name="app_name">TASK APP</string>
    <string name="SummaryTitle">Summary</string>
    <string name="TaskToDo">Task To Do</string>
    <string name="TaskDoing">Task Doing</string>
    <string name="TaskDone">Task Done</string>
    <string name="New">New</string>
    <string name="ShowAll">Show All</string>
    <string name="Cancel">Cancel</string>
    <string name="Save">Save</string>
    <string name="Done">Done</string>
    <string name="LongDescription">Long description</string>
    <string name="ShortDescription">Short description</string>
</resources>
